[package]
name = "rust_sepc265k1_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.2", features = ["derive"] }
num-bigint-dig = "0.8.4"
num-traits = "0.2.14"
num-bigint = "0.4.3"

